# nppDirectWriteEnable

./: CMakeLists.txt  ReadMe.md
cmake/: Hardening.cmake
src/: DirectWriteEnabler.cpp
